--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,6 +1,23 @@
-<h1>Fancy Cocktails</h1>
-<p><% @cocktails.each do |cocktail| %>
-  <%= cocktail.name %>
-<% end %>
-</p>
-<%= link_to "New Cocktail", new_cocktail_url %>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="../../stylesheets/pages/_index.scss">
+</head>
+<body>
+  <h1>Fancy Cocktails</h1>
+  <div class="container">
+    <%= link_to "new cocktail", new_cocktail_path %>
+    <% @cocktails.each do |cocktail| %>
+    <div class="card" style="width: 18rem">
+      <img src="https://picsum.photos/200/150" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title"><%= cocktail.name %></h5>
+        <%= link_to "Let's drink", cocktail %>
+      <% end %>
+      </div>
+    </div>
+  </div>
+</body>
+</html>
